force-app/main/default/objects/ERP_Order__c/ERP_Order__c.object-meta.xml
<CustomObject>
    <label>ERP Order</label>
    <pluralLabel>ERP Orders</pluralLabel>
    <description>Stores ERP order details synchronised from the external ERP system.</description>
    <nameField>
        <label>ERP Order Name</label>
        <type>AutoNumber</type>
        <displayFormat>ERP-{0000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>