force-app/main/default/objects/ERP_Order__c/fields/ERP_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_ID__c</fullName>
    <label>ERP Order ID</label>
    <description>Unique identifier from the external ERP system. Used as external ID for upsert operations.</description>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>