force-app/main/default/objects/ERP_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <description>Total monetary value of the ERP order.</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>